# bus-rtos

./: CMakeLists.txt  README.md  index.html  prj.conf  sample.yaml  serial_to_api.py  serial_to_api_intermittent.py
accelerometer-sample/: sample.yaml
samples/accelerometer/: CMakeLists.txt  README.md  prj.conf
samples/accelerometer/src/: main.c
samples/date-time/: CMakeLists.txt  README.md  prj.conf  sample.yaml
samples/date-time/boards/: actinius_icarus_ns.overlay
samples/date-time/src/: main.c  rtc.h
samples/gps/: CMakeLists.txt  Kconfig  README.md  prj.conf  sample.yaml
samples/gps/src/: startup.c
src/: accelerometer.c  gps_helper.c  gps_helper.h  main.c  rtc.c
stingsense/: CMakeLists.txt  prj.conf
stingsense/boards/: actinius_icarus_ns.overlay
stingsense/src/: accelerometer.h  gps.c  gps.h  json_formatter.c  json_formatter.h  lte.c  lte.h  main.c  rtc.c  rtc.h
sysbuild/: mcuboot.conf
